# romea-ros2-stereo-camera

./: .gitlab-ci.yml  AUTHORS  README.md  romea_stereo_camera.repos  romea_stereo_camera_public.repos
romea_stereo_camera/: CMakeLists.txt  package.xml
romea_stereo_camera_bringup/: CMakeLists.txt  README.md  package.xml
romea_stereo_camera_bringup/launch/: stereo_camera.launch.py  stereo_camera_driver.launch.py
romea_stereo_camera_bringup/launch/drivers/: usb_cam.launch.py
romea_stereo_camera_bringup/launch/simulation/: gazebo_bridge.launch.py
romea_stereo_camera_bringup/python/: romea_stereo_camera_bringup.py
romea_stereo_camera_bringup/scripts/: urdf_description.py
romea_stereo_camera_bringup/test/: test_camera_bringup.yaml  test_stereo_camera_bringup.py  test_stereo_camera_bringup.yaml  test_urdf_description.py
romea_stereo_camera_description/: CMakeLists.txt  README.md  package.xml
romea_stereo_camera_description/config/: zed_1_geometry.yaml  zed_1_specifications.yaml  zed_2_geometry.yaml  zed_2_specifications.yaml  zed_x_specifications.yaml
romea_stereo_camera_description/python/: romea_stereo_camera_description.py
romea_stereo_camera_description/test/: test_stereo_camera_description.py
romea_stereo_camera_description/urdf/: stereo_camera.simulation.xacro  stereo_camera.xacro  stereo_camera.xacro.urdf
