<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_stereo_camera</name>
  <version>0.0.0</version>
  <description>Romea stereo_camera metapackage</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>Apache License 2.0</license>

  <author>Jean Laneurit</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>romea_camera_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
